First attempt to add OCR overlay. WIP

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -35,3 +35,16 @@
 .uk-search-default {
   width: 95% !important;
 }
+.ocr-line {
+  z-index: 999;
+}
+
+.mirador-container .ocrtext text {
+  fill: red;
+  opacity: 1;
+}
+
+.openseadragon-container span {
+ line-height: initial;
+ color: transparent;
+}
