--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -48,3 +48,24 @@
  line-height: initial;
  color: transparent;
 }
+
+/* Wagtail embedded objects */
+.rich-text img {
+    max-width: 100%;
+    height: auto;
+}
+
+.responsive-object {
+    position: relative;
+}
+
+.responsive-object iframe,
+.responsive-object object,
+.responsive-object embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/* end of Wagtail embedded objects */
