--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -33,7 +33,7 @@
           </li>
           {% endfor %}
         </ul>
-        <br />{% for col in collections.pid %}
+        <br />{% for col in volume.collections.all %}
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}</a>
         <br />
         <b>Stable page URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'page' col.pid volume.pid page.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'page' col.pid volume.pid page.pid %}</a>{% endfor %}
