--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -35,18 +35,8 @@
         </ul>
         <br />{% for col in volume.collections.all %}
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}</a>
-        <br />
-        <b>Stable page URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'page' col.pid volume.pid page.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'page' col.pid volume.pid page.pid %}</a>{% endfor %}
-        <br />
-        <b><script type="text/javascript">
-        var currentURL = window.location.href;
-        document.write(currentURL)
-        var _this = this;
-        if (_this.popStateEvent) {
-        var newURL = window.location.href;
-        };
-        document.write(newUrl)
-       </script></b>
+        <br />{% endfor %}
+        <b>Stable page URL:</b> <span id="myLink"></span>
       </div>
       <!-- start ocr el -->
       <div id='ocr' style='opacity: 0;'>
