Update home page model

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -30,7 +30,7 @@
     <div>
       <nav class='uk-navbar-container uk-margin' uk-navbar>
         <div class='uk-navbar-left'>
-        <a class='uk-navbar-item uk-logo' href="{% url 'home' %}">Readux</a>
+        <a class='uk-navbar-item uk-logo' href="/">Readux</a>
           <ul class='uk-navbar-nav'>
             <li>
              {% main_menu %}
