--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -35,8 +35,13 @@
         </ul>
         <br />{% for col in volume.collections.all %}
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}</a>
-        <br />{% endfor %}
+        <br />
         <b>Stable page URL:</b> <span id="myLink"></span>
+        <br />
+        <b>Manifest URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}</a>
+        <br />
+        <b>Collection Manifest URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}</a>
+        {% endfor %}
       </div>
       <!-- start ocr el -->
       <div id='ocr' style='opacity: 0;'>
