--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -1,20 +1,48 @@
 {% extends "base.html" %}
+{% load readux_templatetags %}
+
 {% block content %}
 <h1>{{page.title}}</h1>
 <p class="lead">{{page.tagline}}</p>
 
-{% if page.featured_collection %}
-<h2>Featured Collection</h2>
-<a class="nav-link" href="{% url 'collection' page.featured_collection.pid %}">
-  {{ page.featured_collection.label }}
-</a>
+{% if page.featured_collections %}
+<h2>Featured Collection{{page.featured_collections.all|length|pluralize}}</h2>
+<ul>
+  {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
+  <li>
+    <div>
+      <img src="media/{{collection.upload}}" alt="Banner image for collection {{collection.label}}"/>
+        <a class="nav-link" href="{% url 'collection' collection.pid %}">
+          {{ collection.label }}
+        </a>
+        {{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}
+    </div>
+  </li>
+  {% endfor %}
+</ul>
 {% endif %}
 
-{% if page.featured_collection %}
-<h2>Featured Volume</h2>
-<a class="nav-link" href="{% url 'collection' page.featured_collection.pid %}">
-  {{ page.featured_volume.label }}
-</a>
+{% if page.featured_volumes.all|length != 0 %}
+<h2>Featured Volume{{page.featured_volumes.all|length|pluralize}}</h2>
+<ol>
+    {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
+  <li>
+    <div>{% for col in volume.collections.all %}
+      <a class="nav-link" href="{% url 'page' col.pid volume.pid volume.canvas_set.first.pid %}">
+        <img src="{{ volume.canvas_set.first.thumbnail_crop_landscape }}"/>
+      </a>
+      <p>
+      <a class="nav-link" href="{% url 'page' col.pid volume.pid volume.canvas_set.first.pid %}">{% endfor %}
+
+      <p>{{ volume.label }}</p>
+  </a></p>
+  <p>Author: {{volume.author}}</p>
+  <p>Date Published: {{volume.published_date}}</p>
+  <p>Added {{volume.created_at}}</p>
+    </div>
+  </li>
+  {% endfor %}
+</ol>
 {% endif %}
 
 {% if page.content_display == 'Collections' %}
@@ -45,10 +73,10 @@
       </a>
       <p>
       <a class="nav-link" href="{% url 'page' col.pid volume.pid volume.canvas_set.first.pid %}">{% endfor %}
-
       <p>{{ volume.label }}</p>
   </a></p>
-  <p>{{volume.author}}</p>
+  <p>Author: {{volume.author}}</p>
+  <p>Date Published: {{volume.published_date}}</p>
   <p>Added {{volume.created_at}}</p>
     </div>
   </li>
