--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="uk-container">
-<img src="/media/{{collection.upload}}" alt="Banner image for collection {{collection.label}}" style="width:100%;height:90px" />
+<img src="/media/{{collection.header}}" alt="Header image for collection {{collection.label}}" style="width:100%;" />
 <h1 class='uk-heading-primary'>{{ collection.label }}</h1>
 <h2>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}} in this collection</h2>
 <div class="uk-container">
