--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -75,3 +75,74 @@
   overflow:hidden;
   overflow-y:scroll;
 }
+
+header.page-header {
+    position: relative;
+    z-index: 10;
+}
+
+
+header#page-bg .collection-image-info {
+    float: right;
+    display: inline-block;
+    background: rgba(0, 0, 0, 0.62);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 1em 1.5em 5px 3.5em;
+    font-size: 12px;
+    color: #DEDEDE;
+    z-index: 100;
+    -webkit-transition: bottom 0.6s ease, right 0.6s ease, background-color 0.6s ease, opacity 0.6s ease;
+    -moz-transition: bottom 0.6s ease, right 0.6s ease, background-color 0.6s ease, opacity 0.6s ease;
+    transition: bottom 0.6s ease, right 0.6s ease, background-color 0.6s ease, opacity 0.6s ease;
+    max-width: 300px;
+    min-height: 10px;
+    cursor: pointer;
+}
+
+header#page-bg .collection-image-info:before {
+    content: 'i';
+    position: absolute;
+    border: 1px solid;
+    width: 20px;
+    text-align: center;
+    top: 0;
+    left: 0;
+    margin: 10px 10px;
+    height: 20px;
+    font-family: serif;
+}
+
+header#page-bg .collection-image-info h3 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #DEDEDE;
+}
+header#page-bg .collection-image-info p {
+    width: 100%;
+    color: #DEDEDE;
+    text-align: left;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+header#page-bg .collection-image-info p.credit {
+    font-size: 0.9em;
+}
+
+header#page-bg .collection-image-info.collasped{
+    padding: 1.5em 1.75em;
+    background-color: rgba(22, 22, 22, 0.33);
+    opacity: 0.8;
+}
+
+header#page-bg .collection-image-info.collasped:hover{
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.62);
+}
+
+header#page-bg .collection-image-info.collasped h3,
+header#page-bg .collection-image-info.collasped .info{
+    display: none;
+}
