--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -13,8 +13,8 @@
           <p class="small credit">{{ collection.collection_image_creator }}</p>
         </div>
   </div>
+<h1 class="collection-label">{{ collection.label }}</h1>
 </header>
-<h1 class='uk-heading-primary'>{{ collection.label }}</h1>
 <p>{{ collection.summary }}</p>
 <h2>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}} in this collection</h2>
 <div class="uk-container">
