Better centered header text

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -76,9 +76,19 @@
   overflow-y:scroll;
 }
 
+body .uk-container {
+    width: 90%;
+    max-width: 90%;
+}
+
 header.page-header {
     position: relative;
     z-index: 10;
+    width: 100%;
+}
+
+header.page-header .container img{
+    width: 100%;
 }
 
 
@@ -101,21 +111,39 @@ header#page-bg .collection-image-info {
     cursor: pointer;
 }
 
+/* 
 header#page-bg .collection-label {
-    display: inline-block;
+    display: block;
     background: rgba(0, 0, 0, 0.62);
     position: absolute;
-    bottom: 3%;
-    right: 35%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 0.7em 0.7em 0.3em 0.7em;
     color: #DEDEDE;
-    max-width: 30%;
+    max-width: 80%;
     min-height: 25%;
     max-height: 40%;
 }
+ */
 
-header#page-bg h1.collection-label {
+header#page-bg .collection-label h1 {
     font-size: 3em;
+    color: #DEDEDE;
+    width:100%;
+    height:100%;
+    position: absolute;
+    top: 0;
+    left: 0px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+}
+
+header#page-bg .collection-label h1 span {
+    background-color: rgba(0, 0, 0, 0.62);
+    padding: 0.3em;
 }
 
 header#page-bg .collection-image-info:before {
@@ -164,19 +192,24 @@ header#page-bg .collection-image-info.collasped .info{
     display: none;
 }
 
-@media (max-width:1090px){
-header#page-bg h1.collection-label {
+@media (max-width:1095px){
+header#page-bg .collection-label h1 {
     font-size: 2em;
 }
 }
-@media (max-width:745px){
-header#page-bg h1.collection-label {
+@media (max-width:750px){
+header#page-bg .collection-label h1 {
     font-size: 1.5em;
 }
 }
-@media (max-width:550px){
-header#page-bg h1.collection-label {
+@media (max-width:555px){
+header#page-bg .collection-label h1 {
     font-size: 1em;
+}
+}
+@media (max-width:395px){
+header#page-bg .collection-label h1 {
+    font-size: 0.7em;
 }
 }
 
