--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -13,28 +13,53 @@
     <meta property="og:image" content="https://{{ request.META.HTTP_HOST }}/media/{{ collection.thumbnail }}" />
     <meta property="og:description" content="{{ collection.summary }}" />
     <meta property="og:type" content="Collection in web database" />
-    <meta property="og:url" content="https://{{ request.META.HTTP_HOST }}/col/{{ collection.pid }}" />
+<!-- 
+    <script>
+    var link = document.createElement('meta');
+    link.setAttribute('property', 'og:url');
+    link.content = document.location;
+    document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+ -->    <meta property="og:url" content="https://{{ request.META.HTTP_HOST }}/col/{{ collection.pid }}" />
     {% elif volume.label %}
     <meta property="og:title" content="{{ volume.label|safe }}" />
     <meta property="og:description" content="{{ volume.summary }}" />
     <meta property="og:type" content="Volume in web database" />
-    {% for page in volume.canvas_set.all %}
+    {% for page in volume.canvas_set.all %}{% if forloop.last %}
     <meta property="og:image" content="{{ page.social_media }}" />
-    <meta property="og:image:secure_url" content="{{ page.social_media }}" />{% for col in volume.collections.all %}
-    <meta property="og:url" content="https://{{ request.META.HTTP_HOST }}{% url 'page' col.pid volume.pid page.pid %}" />{% endfor %}
+    <meta property="og:image:secure_url" content="{{ page.social_media }}" />
+<!-- 
+    <script>
+    var link = document.createElement('meta');
+    link.setAttribute('property', 'og:url');
+    link.content = jQuery(this).attr('canvasID');
+    document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+ -->
+    {% for col in volume.collections.all %}
+    <meta property="og:url" content="https://{{ request.META.HTTP_HOST }}{% url 'page' col.pid volume.pid page.pid %}" />
     {% endfor %}
+    {% endif %}{% endfor %}
     {% else %}
     <meta property="og:title" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta property="og:image" content="https://{{ request.META.HTTP_HOST }}/static/images/favicons/favicon.ico" />
     <meta property="og:description" content="{{ page.tagline }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://readux.ecds.emory.edu" />
+<!-- 
+    <script>
+    var link = document.createElement('meta');
+    link.setAttribute('property', 'og:url');
+    link.content = document.location;
+    document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+ -->    <meta property="og:url" content="https://readux.ecds.emory.edu" />
     {% endif %}
     <meta name="twitter:image:alt" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta name="og:site_name" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@emorycds" />
     <meta name="twitter:creator" content="@emorycds" />
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
