--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -48,6 +48,8 @@
         <br />
         <b>Stable page URL:</b> <span id="myLink"></span>
         <br />
+        <b><a id="myLink" href="">CLICK</a><b>
+        <br />
         {% endfor %}
       </div>
       <!-- start ocr el -->
