--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -49,8 +49,9 @@
         <br />
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' col.pid volume.pid %}</a>
         <br />
-        <b>Stable page URL:</b> <span class="link" id="myLink"></span>
+        <b>Canvas URL:</b> <span class="link" id="myLink"></span>
         <br />
+        <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
 <!-- 
         <p id="test"></p>
         <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
