--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -5,6 +5,7 @@
 {% endblock extra_css %}
 
 {% block content %}
+
 <h1 class='uk-text-truncate'>
   {{volume.label}}
 </h1>
@@ -51,12 +52,18 @@
         <br />
         <b>Canvas URL:</b> <span class="link" id="myLink"></span>
         <br />
-        <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
+        <b>Stable page URL:</b> <span class="link" id="mySpan"></span><a class="link" id="mySpan"></a>
 <!-- 
         <p id="test"></p>
         <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
         <img src="https://www.cabq.gov/culturalservices/biopark/images/share-on-facebook.png/@@images/image.png" title="Facebook" alt="Facebook" ></a>
  -->
+        <br/>
+<!-- 
+        <a  id="" class="facebook" href="" target="_blank">
+        <img src="https://www.cabq.gov/culturalservices/biopark/images/share-on-facebook.png/@@images/image.png" title="Facebook" alt="Facebook" ></a>
+ -->
+        <span class="link" id="facebookpage"></span>
         {% endfor %}
       </div>
 
