--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -6,7 +6,7 @@
 <h1>{{page.title}}</h1>
 <p class="lead">{{page.tagline}}</p>
 
-{% if page.featured_collections %}
+{% if page.featured_collections.all|length != 0  %}
 <h2>Featured Collection{{page.featured_collections.all|length|pluralize}}</h2>
 <ul>
   {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
